[gd_scene load_steps=3 format=2]

[ext_resource path="res://black_background.jpg" type="Texture" id=1]
[ext_resource path="res://Confidence.gd" type="Script" id=2]

[node name="Confidence" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 312.0
margin_top = 37.5
margin_right = 352.0
margin_bottom = 77.5
rect_min_size = Vector2( 400, 525 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 60.0
margin_right = 358.0
margin_bottom = 198.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfidenceTitle" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 323.0
margin_bottom = 14.0
text = "Confidence"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 323.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 30 )

[node name="ConfidenceQuestion" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 52.0
margin_right = 323.0
margin_bottom = 83.0
text = "I feel confident in my ability to use the interfacing
device."

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 87.0
margin_right = 323.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 15 )

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 106.0
margin_right = 323.0
margin_bottom = 122.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_right = 20.0
margin_bottom = 16.0
rect_min_size = Vector2( 20, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 24.0
margin_right = 299.0
margin_bottom = 16.0
rect_min_size = Vector2( 275, 0 )
max_value = 4.0
tick_count = 5
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 303.0
margin_right = 323.0
margin_bottom = 16.0
rect_min_size = Vector2( 20, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 126.0
margin_right = 323.0
margin_bottom = 157.0

[node name="StronglyDisagree" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 31.0
text = "Strongly
Disagree"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 65.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="Disagree" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 69.0
margin_top = 8.0
margin_right = 125.0
margin_bottom = 22.0
text = "Disagree"

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 129.0
margin_right = 134.0
margin_bottom = 31.0
rect_min_size = Vector2( 5, 0 )

[node name="Neutral" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 138.0
margin_top = 8.0
margin_right = 186.0
margin_bottom = 22.0
text = "Neither"

[node name="MarginContainer3" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 190.0
margin_right = 205.0
margin_bottom = 31.0
rect_min_size = Vector2( 15, 0 )

[node name="Agree" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 209.0
margin_top = 8.0
margin_right = 246.0
margin_bottom = 22.0
text = "Agree"

[node name="MarginContainer4" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 250.0
margin_right = 265.0
margin_bottom = 31.0
rect_min_size = Vector2( 15, 0 )

[node name="StronglyAgree" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 269.0
margin_right = 320.0
margin_bottom = 31.0
text = "Strongly
Agree"
align = 1

[node name="MarginContainer5" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 161.0
margin_right = 323.0
margin_bottom = 361.0
rect_min_size = Vector2( 0, 200 )

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 365.0
margin_right = 323.0
margin_bottom = 385.0
alignment = 1

[node name="Button" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 117.0
margin_right = 167.0
margin_bottom = 20.0
text = "Finish"

[node name="ExitButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 171.0
margin_right = 206.0
margin_bottom = 20.0
text = "Exit"
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/HBoxContainer3/Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer3/ExitButton" to="." method="_on_ExitButton_pressed"]
